unpackaged/main/default/objects/natterbox__Natterbox_Queued_Call__c/natterbox__Natterbox_Queued_Call__c.object-meta.xml
<CustomObject>
    <label>Natterbox Queued Call</label>
    <nameField>
        <label>Natterbox Test Queued Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Natterbox Queued Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>