unpackaged/main/default/objects/natterbox__Natterbox_Queued_Call__c/fields/natterbox__CallDateTime__c.field-meta.xml
<CustomField>
    <fullName>natterbox__CallDateTime__c</fullName>
    <label>Call Date Time</label>
    <type>DateTime</type>
</CustomField>