unpackaged/main/default/objects/natterbox__Natterbox_Queued_Call__c/fields/natterbox__CallDetail__c.field-meta.xml
<CustomField>
    <fullName>natterbox__CallDetail__c</fullName>
    <label>Call Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>