unpackaged/main/default/objects/natterbox__Natterbox_Queued_Call__c/fields/natterbox__CallerNumber__c.field-meta.xml
<CustomField>
    <fullName>natterbox__CallerNumber__c</fullName>
    <label>Caller Number</label>
    <type>Phone</type>
</CustomField>