unpackaged/main/default/objects/natterbox__Natterbox_Queued_Call__c/fields/natterbox__CallUUID__c.field-meta.xml
<CustomField>
    <fullName>natterbox__CallUUID__c</fullName>
    <label>Call UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>