unpackaged/main/default/objects/natterbox__Natterbox_Queued_Call__c/listViews/natterbox__All.listView-meta.xml
<ListView>
    <fullName>natterbox__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>